# echoavatar-backend

./: .gitignore  README.md  download_models.py  pyproject.toml  requirements.txt  run.py
app/: .gitkeep  main.py
app/api/: __init__.py  routes.py
app/services/: __init__.py  wav2lip_service.py
wav2lip/: inference.py
wav2lip/temp/: result.avi
